Teacher Examples/m4.1/Example_07.txt

  File "Example_07.py", line 5
    for baseballTeam in baseballTeams
                                    ^
SyntaxError: invalid syntax
